fix: limited chat card height to be 112px according to designs, disabled wrap of plans cards for now

--- a/chat-strazen-media/src/components/Balance/Balance.style.css
+++ b/chat-strazen-media/src/components/Balance/Balance.style.css
@@ -64,7 +64,7 @@ img {
 
 .container-button {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   justify-content: center;
   width: 100%;
   gap: 12px;
